# trading-agent

./: .env.example  .gitignore  Dockerfile  README.md  arquitectura_agente_trading_fastapi.md  docker-compose.yml  pyproject.toml  runtime_overrides.json
app/: main.py
app/api/: deps.py  security.py
app/core/: config.py
app/db/: session.py
app/providers/: ai_provider.py  gemini_provider.py  mock_provider.py  openai_provider.py
app/schemas/: agent.py  news.py  risk.py  signal.py  system.py  trade.py
app/services/: ai_signal_service.py  audit_logger.py  autonomous_runner.py  binance_market_stream.py  binance_multi_market.py  binance_spot.py  binance_user_stream.py  event_bus.py  kill_switch.py  market_service.py  news_risk_service.py  notifier.py  paper_trading.py  protective_exit_monitor.py  reconciliation.py  risk_manager.py  runtime_config.py  symbol_lock.py  system_state.py
app/tests/: conftest.py  test_ai_signal_service.py  test_api.py  test_autonomous_runner_circuit_breaker.py  test_binance_multi_market.py  test_binance_spot_executor.py  test_binance_user_stream.py  test_candle_close_alignment.py  test_fees_and_slippage.py  test_kill_switch.py  test_market_service.py  test_market_stream.py  test_news_risk_service.py  test_order_intent_idempotency.py  test_paper_trading.py  test_pre_llm_gate.py  test_pre_post_price_drift.py  test_protective_exit_monitor.py  test_risk_manager.py  test_runtime_risk_config.py  test_settings_validators.py  test_signal_schema.py  (+2 more)
scripts/: autonomous_loop.py
trading_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+14 files in other folders)
