[project]
name = "trading-ai-agent"
version = "0.1.0"
description = "FastAPI paper trading AI agent with deterministic risk controls."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "httpx>=0.27.0",
    "openai>=1.70.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
